gcc/testsuite/g++.dg/modules/tpl-spec-6_b.C
// { dg-additional-options "-fmodules-ts" }

module foo;

__is_nt_convertible_helper<int, int, false> ok;
__is_nt_convertible_helper<int, int, true> not_ok; // { dg-error "incomplete" }
